--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>Interactive 3D Expo</header>
     <ul id="nav">
         <li class="active"><a href="index.html">Assesmbled View</a></li>
-        <li><a href="../pages/dis.html">Disassembled View</a></li>
+        <li><a href="./pages/dis.html">Disassembled View</a></li>
     </ul>
     <div class="canv">
         <canvas id="myCanvas"></canvas>
