--- a/pages/dis.html
+++ b/pages/dis.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webgl Bogie!</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info_style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/info_style.css">
 </head>
 <body>
     <header>Interactive 3D Expo</header>
     <ul id="nav">
         <li><a href="/index.html">Assesmbled View</a></li>
-        <li class="active"><a href="../pages/dis.html">Disassembled View</a></li>
+        <li class="active"><a href="./pages/dis.html">Disassembled View</a></li>
     </ul>
     <div class="canv">
         <canvas id="myCanvas"></canvas>
