--- a/pages/dis.html
+++ b/pages/dis.html
@@ -13,8 +13,8 @@
 <body>
     <header>Interactive 3D Expo</header>
     <ul id="nav">
-        <li><a href="/index.html">Assesmbled View</a></li>
-        <li class="active"><a href="./pages/dis.html">Disassembled View</a></li>
+        <li><a href="./index.html">Assesmbled View</a></li>
+        <li class="active"><a href="dis.html">Disassembled View</a></li>
     </ul>
     <div class="canv">
         <canvas id="myCanvas"></canvas>
